Fixed collapse menu and remove

--- a/watch.css
+++ b/watch.css
@@ -28,11 +28,12 @@ body{
 	max-width:300px;
 	padding-bottom:35px;
 	/*height:100%;*/
+	min-height:381px;
 
 }
 
 #p01{
-	font-size: 19px;
+	font-size: 23px;
 	color: #cfe3f9;
 	line-height: 26px;
 
@@ -41,16 +42,26 @@ body{
 
 .title{
 	color: #eef3c7;
-	font-size: 19px;
+	font-size: 23px;
 
 	
 }
 
 .genre, .rated, .runtime, .year, .plot{
 	color: #eef3c7;
-	
 	font-size: 14px; 
 }
+
+.navbar .navbar-nav {
+  display: inline-block;
+  float: none;
+  vertical-align: top;
+}
+
+.navbar .navbar-collapse {
+  text-align: center;
+}
+
 
 h1{
 
@@ -77,6 +88,8 @@ text-align: center;
 	color:#cfe3f9;
 	font-family: "Helvetica","Arial" sans-serif;
 	font-size: 15px;
+	padding-left:30px;
+	padding-right:30px;
 
 }
 
